objects/ssot__FiscalCalendar__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DayDate__c</fullName>
        <label>Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FiscalMonthFirstDayDate__c</fullName>
        <label>Fiscal Month First Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FiscalQuarterFirstDayDate__c</fullName>
        <label>Fiscal Quarter First Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FiscalWeekFirstDayDate__c</fullName>
        <label>Fiscal Week First Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FiscalYearFirstDayDate__c</fullName>
        <label>Fiscal Year First Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fiscal Calendar Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MonthNumber__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuarterNumber__c</fullName>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WeekNumber__c</fullName>
        <label>Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__YearNumber__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>